# dependency_code2

./: README.md  pyproject.toml  results.json  results_java.json  results_openia.json
src/adapters/db/: postgres_repo.py
src/adapters/scanner/: syft_scanner.py
src/adapters/scm/: git_provider.py
src/application/: service.py
src/dependency_analysis_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/domain/: models.py  ports.py
src/entrypoints/: cli.py
