[project]
name = "dependency-analysis-tool"
version = "0.1.0"
description = "herramienta de análisis de dependencias"
authors = [
    {name = "reed74"},
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
analyze-deps = "src.entrypoints.cli:main"
